# CircuitPython_m5stack_unit8

./: .gitignore  .pylintrc  LICENSE  README.md  README.rst  README.rst.license  pyproject.toml  requirements.txt  unit_8_encoder.py
.github/workflows/: release_gh.yml
docs/: api.rst  conf.py  examples.rst  index.rst  index.rst.license
examples/: m5stack_unit8_angle_simpletest.py  m5stack_unit8_encoder_simpletest.py  unit8_angle_simpletest.py  unit8_encoder_simpletest.py
images/: m5stack_unit8.jpg.license
m5stack_unit8/: angle.py  encoder.py
