# SPDX-FileCopyrightText: 2022 Alec Delaney, written for Adafruit Industries
# SPDX-FileCopyrightText: Copyright (c) 2023 Neradoc
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circuitpython-m5stack-unit8"
description = "Library for M5Stack's Unit8 Encoder and Unit8 Angle breakouts."
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "Neradoc"}
]
urls = {Homepage = "https://github.com/Neradoc/CircuitPython_m5stack_unit8"}
keywords = [
    "adafruit",
    "blinka",
    "circuitpython",
    "micropython",
    "m5stack_unit8",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["m5stack_unit8"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
